# python-packaging

./: LICENSE  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
src/sample_package/: example.py
tests/unit/: example_test.py
