[metadata]
name = example-pkg-cory-miller
version = 0.0.1
author = Cory Miller
author_email = miller.cory.ryan@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cory-miller/pypi/
project_urls =
    Bug Tracker = https://github.com/cory-miller/pypi/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >=4, <7

[tox:tox]
envlist = 
    {py36,py37,py38,py39}-tox{312,315,latest}
isolated_build = true
skip_missing_interpreters = true

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
description = run test suite under {basepython}
deps =
    tox312: tox>=3.12,<3.13
    tox315: tox>=3.15,<3.16
extras = testing
commands = pytest {posargs}